Source/WebKit/NetworkProcess/curl/NetworkDataTaskCurl.cpp
@@ -359,13 +359,7 @@ void NetworkDataTaskCurl::tryHttpAuthentication(AuthenticationChallenge&& challe
             return;
         }
 
-        if (disposition == AuthenticationChallengeDisposition::UseCredential && (!credential.isEmpty() || !m_didChallengeEmptyCredentialForAuth)) {
-            // When "isAllowedToAskUserForCredentials" is false, an empty credential, which might cause
-            // an infinite authentication loop. To avoid such infinite loop, a HTTP authentication with empty
-            // user and password is processed only once.
-            if (credential.isEmpty())
-                m_didChallengeEmptyCredentialForAuth = true;
-
+        if (disposition == AuthenticationChallengeDisposition::UseCredential && !credential.isEmpty()) {
             if (m_storedCredentialsPolicy == StoredCredentialsPolicy::Use) {
                 if (credential.persistence() == CredentialPersistenceForSession || credential.persistence() == CredentialPersistencePermanent)
                     m_session->networkStorageSession().credentialStorage().set(m_partition, credential, challenge.protectionSpace(), challenge.failureResponse().url());
@@ -391,10 +385,7 @@ void NetworkDataTaskCurl::tryProxyAuthentication(WebCore::AuthenticationChalleng
             return;
         }
 
-        if (disposition == AuthenticationChallengeDisposition::UseCredential && (!credential.isEmpty() || !m_didChallengeEmptyCredentialForProxyAuth)) {
-            if (credential.isEmpty())
-                m_didChallengeEmptyCredentialForProxyAuth = true;
-
+        if (disposition == AuthenticationChallengeDisposition::UseCredential && !credential.isEmpty()) {
             CurlContext::singleton().setProxyUserPass(credential.user(), credential.password());
             CurlContext::singleton().setDefaultProxyAuthMethod();
 
